[tool.poetry]
name = "special-effect"
version = "0.1.0"
description = ""
authors = ["lastwater8725 <chlwhdtn8725@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

pyqt6 = "^6.7.1"
numpy = "^2.1.3"
opencv-python = "^4.10.0.84"
opencv-contrib-python = "^4.10.0.84"
pyinstaller = "^6.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
